# JasnahAndLoop

./: CMakeLists.txt  Makefile  TODO  compile_commands.json
libSrc/: BasicMath.hpp  CMakeLists.txt  ColorConversion.cpp  ColorConversion.hpp  ErrorOr.hpp  Jasnah.hpp  Jasnah2.hpp  Makefile  MemoryLayout.hpp  Option.hpp  looper.cpp  looper.hpp
libSrc/Tests/: JasnahTests.cpp  JasnahTests2.cpp  OptionTests.cpp
src/: CMakeLists.txt  LethaniGlobalDefines.h  Makefile  main.cpp
